# keyseed

./: .gitignore  Cargo.toml  README.md  build.sh  package.json
.github/workflows/: ci.yml  release.yml
scripts/: common.js  postinstall.js
src/: crypto.rs  main.rs
