[package]
name = "hashit"
version = "0.1.2"
edition = "2021"
description = "Cross-platform local secret encryption app with deterministic Hashit v2 output and v1 compatibility"
license = "MIT"

[dependencies]
aes-gcm = "0.10"
aes-gcm-siv = "0.11"
base64 = "0.22"
eframe = "0.33"
pbkdf2 = "0.12"
rand = "0.8"
sha2 = "0.10"
thiserror = "1.0"
zeroize = "1.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
