[package]
name = "keyseed"
version = "0.1.3"
edition = "2021"
description = "Simple CLI for deterministic local secret encryption"
license = "MIT"

[dependencies]
aes-gcm = "0.10"
aes-gcm-siv = "0.11"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
pbkdf2 = "0.12"
rand = "0.8"
sha2 = "0.10"
thiserror = "1.0"
zeroize = "1.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
